# cpp-project

./: .gitignore  CMakeLists_example.txt  README.md  TasksLesson04.txt  containers  containers.cpp  helloworld  helloworld.cpp  inclass_week2  inclass_week2.cpp
Lesson07/Demo07_async/Demo07_upload/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main_print.cpp
Lesson07/Demo08/: CMakeLists.txt  main1.cpp  main2.cpp
build-week3_v2-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-week3_v2-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-38296a62096249a7dbec.json  cmakeFiles-v1-aad9c11c532571b27511.json  codemodel-v2-db914e6b12c3b5f527db.json  index-2023-10-03T12-55-21-0856.json  target-week3_v2-Debug-dc58719909f78760f1e5.json
examprep/: CMakeLists.txt  main.cpp  preparation.cpp
prepare/: preparation.cpp
project/: beacon.txt
project/project/: CMakeLists.txt
project/project/src/: main.cpp
project/project/src/game/: BlinkerGame.h  Blinkergame.cpp  MethuselahGame.cpp  MethuselahGame.h  RandomGame.cpp  RandomGame.h  SpaceshipGame.cpp  SpaceshipGame.h  StaticGame.cpp  StaticGame.h  gameOfLife.cpp  gameOfLife.h  gamefactory.cpp  gamefactory.h  iGameOfLife.h  pattern.h
project/project/src/ui/: quadraticWidget.cpp  quadraticWidget.h  widget.cpp  widget.h  widget.ui
project/project/src/ui/cinder/: cinderapp.cpp  cinderapp.h
test3/build-week3-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
test3/build-week3-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-8f0641ad192a7dc002ed.json  cmakeFiles-v1-781acb8d4bf7b1f83ce6.json  codemodel-v2-57d3f536dcdf9787082e.json  index-2023-10-03T13-47-17-0452.json  index-2023-10-08T12-27-20-0793.json  target-week3_v2-Debug-96b258630c41c9d9c8fe.json
test3/build-week3-Desktop-Debug/week3_autogen/: mocs_compilation.cpp
test3/build-week3-Desktop-Debug/week3_autogen/6JUD6UOVAQ/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
test3/build-week3-Desktop-Debug/week3_autogen/YPKJ5OE7LN/: moc_widget.cpp  moc_widget.cpp.d
test3/build-week3-Desktop-Debug/week3_autogen/include/: ui_widget.h
test3/build-week3-Desktop-Debug/week3_v2_autogen/6JUD6UOVAQ/: moc_qcustomplot.cpp  moc_qcustomplot.cpp.d
test3/build-week3-Desktop-Debug/week3_v2_autogen/YPKJ5OE7LN/: moc_widget.cpp.d
test3/week3/: CMakeLists.txt  ekg.txt  main.cpp
test3/week3/src/ui/: widget.cpp  widget.h  widget.ui
week1/: cars.txt  stl_frist  stl_frist.cpp
week1/week1/: CMakeLists.txt  main.cpp
week1/week1/src/: container.cpp  container.h  ex1.h  ex2.h  stl_frist.cpp
week10/01_TimerDemo/: CMakeLists.txt  eventloop.cpp  eventloop.h  timer.cpp  timer.h  timerCallback.h
week10/Ex07_vinzenz_uhr/: CMakeLists.txt
week10/Ex07_vinzenz_uhr/src/app/acquisition/: ICamera.h  VCamera.cpp  VCamera.h  VRgbCamera.cpp  VRgbCamera.h  camera_factory.cpp  camera_factory.h
week10/Ex07_vinzenz_uhr/src/app/common/: control.cpp  control.h  dataBufferPool.h  icontrol.h
week10/Ex07_vinzenz_uhr/src/app/visualisation/: rOg_image.cpp  rOg_image.h
week10/Ex07_vinzenz_uhr/src/ui/: Iwidget.h  widget.cpp  widget.h  widget.ui
week10/producerConsumerPattern/: CMakeLists.txt  README.md
week10/producerConsumerPattern/src/: main.cpp
week10/producerConsumerPattern/src/app/acquisition/: VCamera.cpp  VCamera.h
week10/producerConsumerPattern/src/app/common/: control.cpp  control.h  dataBufferPool.cpp  dataQueue.h
week10/producerConsumerPattern/src/ui/: widget.cpp  widget.h
week2/: Billionaire.h  billionaire.h  ex2  ex2.cpp  ex3  ex3.cpp  ex3_v2  ex3_v2.cpp  inclass_week2  inclass_week2.cpp  text.txt
week2/week2/: CMakeLists.txt  Forbes2018.txt  Readme.md  main.cpp
week2/week2/src/: billionaire.cpp  billionaire.h
week3/: ekg.txt  main.cpp
week4/code_examples/01_creatingThreads/: main.cpp
week4/code_examples/03_threadInClassExercise1/: CMakeLists.txt  main.cpp
week4/code_examples/04_threadInClassExercise2/: CMakeLists.txt  main  main.cpp
week4/code_examples/build-03_threadInClassExercise1-Desktop-Debug/: CMakeCache.txt  InClassThread  Makefile  cmake_install.cmake
week4/code_examples/build-04_threadInClassExercise2-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
week4/week4/: CMakeLists.txt  main.cpp
week5/: threadLog.txt
week5/ThreadDemos/01_creatingThreads/: CMakeLists.txt  main.cpp
week5/ThreadDemos/02_joinVsDetach/: CMakeLists.txt  main.cpp
week5/ThreadDemos/03_dataRaceI/: CMakeLists.txt  main.cpp
week5/ThreadDemos/04_dataRaceII/: CMakeLists.txt  main.cpp
week5/ThreadDemos/05_dataRaceIII/: CMakeLists.txt  main.cpp
week5/ThreadDemos/06_Deadlock/: CMakeLists.txt  main.cpp
week5/ThreadDemos/07_callOnceFlag/: CMakeLists.txt  main.cpp  onceflagprintout.cpp
week5/week5/: CMakeLists.txt  ThreadLogFile.h  main.cpp
week6/CondVariables_upload/: CMakeLists.txt  main1.cpp  main2.cpp
week6/week6/: CMakeLists.txt  DataQueue.h  main.cpp
week7/: CMakeLists.txt  main.cpp
week8/01_TimerDemo_upload/: CMakeLists.txt  eventloop.cpp  eventloop.h  main.cpp  timer.cpp  timer.h  timerCallback.h
week8/producerConsumerPattern/: CMakeLists.txt
week8/producerConsumerPattern/src/app/acquisition/: CameraFactory.cpp  CameraFactory.h  RGBcamera.cpp  RGBcamera.h  VCamera.cpp  VCamera.h  iBaseCamera.h  iCamera.h
week8/producerConsumerPattern/src/app/common/: control.cpp  control.h  dataBuffer.cpp  iControl.h
week8/producerConsumerPattern/src/app/visualisation/: rOg_image.h  videoVisualizer.cpp  videoVisualizer.h
week8/producerConsumerPattern/src/ui/: widget.cpp  widget.h  widget.ui
week8/producerConsumerPattern_marta/: CMakeLists.txt  CMakeLists.txt.user.8a668f3
week8/producerConsumerPattern_marta/resources/: BFH.stylesheet  res.qrc
week8/producerConsumerPattern_marta/src/app/acquisition/: VCamera.cpp  VCamera.h  cameraCb.h
week8/producerConsumerPattern_marta/src/app/common/: control.cpp  control.h  controlCb.h  dataBuffer.h
week8/producerConsumerPattern_marta/src/ui/: widget.cpp  widget.h
(+20 files in other folders)
